--- a/source/stylesheets/refills/_label-alerts.scss
+++ b/source/stylesheets/refills/_label-alerts.scss
@@ -1,4 +1,4 @@
-// if you are using Bitters you can remove everything down to the commented line
+// if you are using bitters.io you can remove everything down to the commented line
 $alert-color: #FFF6BF !default;
 $error-color: #FBE3E4 !default;
 $success-color: #E6EFC2 !default;
