--- a/source/stylesheets/refills/_switch.scss
+++ b/source/stylesheets/refills/_switch.scss
@@ -1,7 +1,7 @@
 .label-switch {  
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-accent-color: #477DCA;
-  $base-background-color: white;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-accent-color: #477DCA !default;
+  $base-background-color: white !default;
 
   //////////////////////////////////////////////
 
