--- a/source/stylesheets/refills/_type-system-serif.scss
+++ b/source/stylesheets/refills/_type-system-serif.scss
@@ -1,14 +1,14 @@
 article.type-system-serif {
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-radius: 3px;
-  $base-line-height: 1.5em;
-  $base-spacing: 1.5em;
-  $base-accent-color: #477DCA;
-  $base-link-color: $base-accent-color;
-  $dark-gray: #333;
-  $light-gray: #DDD;
-  $medium-screen: em(640);
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-radius: 3px !default;
+  $base-line-height: 1.5em !default;
+  $base-spacing: 1.5em !default;
+  $base-accent-color: #477DCA !default;
+  $base-link-color: $base-accent-color !default;
+  $dark-gray: #333 !default;
+  $light-gray: #DDD !default;
+  $medium-screen: em(640) !default;
+  $base-font-color: $dark-gray !default;
   -webkit-font-smoothing: antialiased;
 
   h1, h2, h3, p {
@@ -29,8 +29,8 @@ article.type-system-serif {
   }
 
   a {
-    text-decoration: none;
     color: $base-link-color;
+    text-decoration: none;
   }
 
   //////////////////////////////////////////////
@@ -67,8 +67,8 @@ article.type-system-serif {
 
   h2 {
     font-family: $serif-2;
-    font-style: italic;
     font-size: 1em;
+    font-style: italic;
     font-weight: 400;
     line-height: 1.6em;
     margin-bottom: .9em;
@@ -79,14 +79,14 @@ article.type-system-serif {
   }
 
   code {
-    white-space: nowrap;
-    font-family: monaco;
     background: #F7F7F7;
-    border: 1px solid #E0E0E0;
     border-radius: $base-border-radius * 1.5;
-    padding: .1em .4em;
+    border: 1px solid #E0E0E0;
+    font-family: monaco;
     font-size: .75em;
     font-style: normal;
+    padding: .1em .4em;
+    white-space: nowrap;
   }
 
   h3 {
@@ -100,15 +100,15 @@ article.type-system-serif {
   p.date {
     color: transparentize($base-font-color, .6);
     font-family: $serif-2;
-    font-style: italic;
     font-size: .9em;
+    font-style: italic;
     margin-bottom: .3em;
   }
 
   p {
     font-family: $serif-2;
-    line-height: 1.6em;
     font-size: .9em;
+    line-height: 1.6em;
     margin-bottom: 1.5em;
 
     span {
@@ -120,19 +120,19 @@ article.type-system-serif {
   a.read-more {
     display: inline-block;
     font-family: $sans-serif;
-    font-weight: 700;
     font-size: .8em;
-    text-transform: uppercase;
+    font-weight: 700;
     margin-left: .2em;
     position: relative;
+    text-transform: uppercase;
 
     span {
       font-family: $serif;
+      font-size: 1.5em;
       font-style: normal;
       position: absolute;
-      font-size: 1.5em;
-      top: -1px;
       right: -12px;
+      top: -1px;
     }
   }
   
