--- a/source/stylesheets/_refills-nav.scss
+++ b/source/stylesheets/_refills-nav.scss
@@ -66,7 +66,7 @@ section.inner-content {
 }
 
 .er_toc {
-  $base-line-height: 1.5em;
+  $base-line-height: 1.5em !default;
 
   @include position(fixed, 0px auto 0px 0px);
   @include size(220px 100%);
