--- a/source/stylesheets/refills/_accordion.scss
+++ b/source/stylesheets/refills/_accordion.scss
@@ -1,18 +1,18 @@
 .accordion {  
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-line-height: 1.5em;
-  $base-spacing: 1.5em;
-  $dark-gray: #333;
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-line-height: 1.5em !default;
+  $base-spacing: 1.5em !default;
+  $dark-gray: #333 !default;
+  $base-font-color: $dark-gray !default;
   -webkit-font-smoothing: antialiased;
 
-  padding: 0;
   margin: 0;
+  padding: 0;
 
   ul {
-    padding: 0;
     margin: 0;
+    padding: 0;
   }
 
   li {
@@ -49,8 +49,8 @@
 
     > a {
       color: $accordion-menu-color;
-      padding: $accordion-menu-list-padding;
       display: block;
+      padding: $accordion-menu-list-padding;
     }
 
     &:last-child {
