--- a/source/stylesheets/refills/_cards.scss
+++ b/source/stylesheets/refills/_cards.scss
@@ -5,16 +5,17 @@
 }
 
 .card {
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-border-radius: 3px;
-  $base-background-color: white;
-  $base-spacing: 1.5em;
-  $base-accent-color: #477DCA;
-  $base-link-color: $base-accent-color;
-  $dark-gray: #333;
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-border-radius: 3px !default;
+  $base-background-color: white !default;
+  $base-spacing: 1.5em !default;
+  $base-accent-color: #477DCA !default;
+  $base-link-color: $base-accent-color !default;
+  $dark-gray: #333 !default;
+  $base-font-color: $dark-gray !default;
   -webkit-font-smoothing: antialiased;
+  
   //////////////////////////////////////////////
 
   $card-border-color: $base-border-color;
@@ -28,17 +29,17 @@
   $card-padding-for-absolute-stats: 5em;
   $card-margin: 1em;
 
-  @include transition (all 0.2s ease-in-out);
   @include flex-basis(15em);
   @include flex-grow(1);
+  @include transition (all 0.2s ease-in-out);
   background-color: $card-background;
   border-radius: $base-border-radius;
-  position: relative;
   border: $card-border;
-  margin: 0 $card-margin $base-spacing $card-margin;
-  cursor: pointer;
-  padding-bottom: $card-padding-for-absolute-stats;
   box-shadow: 0 2px 4px darken($base-background-color, 10);
+  cursor: pointer;
+  margin: 0 $card-margin $base-spacing $card-margin;
+  padding-bottom: $card-padding-for-absolute-stats;
+  position: relative;
   position: relative;
 
   .card-image {
@@ -47,36 +48,36 @@
 
     img {
       @include transition (all 0.2s ease-in-out);
-      width: 100%;
       background: $card-image-background;
       border-top-left-radius: $base-border-radius;
       border-top-right-radius: $base-border-radius;
+      width: 100%;
     }
   }
 
   .ribbon-wrapper {
-    $ribbon-size: 85px;
     $ribbon-background: $base-accent-color;
+    $ribbon-size: 85px;
     @include size($ribbon-size);
     overflow: hidden;
     position: absolute;
-    top: -1px;
     right: -1px;
+    top: -1px;
 
     .ribbon {
-      line-height: 1.5em;
+      @include transform(rotate(45deg));
+      background-color: $ribbon-background;
+      box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+      color: white;
       font-size: .8em;
       font-weight: 800;
-      text-align: center;
-      @include transform(rotate(45deg));
-      position: relative;
-      padding: 2px 7px;
       left: -5px;
+      line-height: 1.5em;
+      padding: 2px 7px;
+      position: relative;
+      text-align: center;
       top: 15px;
       width: 120px;
-      background-color: $ribbon-background;
-      color: white;
-      box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
     }
   }
 
@@ -86,14 +87,14 @@
     border-bottom: $card-border;
     border-radius: $base-border-radius $base-border-radius 0 0;
     font-weight: bold;
-    padding: $base-spacing/3 $base-spacing/2;
     line-height: 1.5em;
+    padding: $base-spacing/3 $base-spacing/2;
   }
 
   .card-copy {
-    padding: $base-spacing/2 $base-spacing/2;
     font-size: .9em;
     line-height: 1.5em;
+    padding: $base-spacing/2 $base-spacing/2;
 
     p {
       margin: 0 0 ($base-spacing / 2);
@@ -102,22 +103,22 @@
 
   .card-stats {
     @include align-self(flex-end);
-    position: absolute;
     bottom: .5em;
-    padding: $base-spacing/2 $base-spacing/2;
     overflow: auto;
+    padding: $base-spacing/2 $base-spacing/2;
+    position: absolute;
 
     ul {
       padding: 0;
     }
 
     li {
-      display: inline;
-      color: $card-stats-color;
-      font-weight: 800;
-      font-size: 1.2em;
-      float: left;
       border-right: 1px solid transparentize($base-font-color, .8);
+      color: $card-stats-color;
+      display: inline;
+      float: left;
+      font-size: 1.2em;
+      font-weight: 800;
       line-height: 1.1em;
       padding: 0 .7em 0 .7em;
 
@@ -131,8 +132,8 @@
 
       span {
         color: $base-font-color;
-        font-size: .7em;
         display: block;
+        font-size: .7em;
         font-weight: normal;
       }
     }
