--- a/source/stylesheets/refills/_modal.scss
+++ b/source/stylesheets/refills/_modal.scss
@@ -1,16 +1,16 @@
 .modal {
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-border-radius: 3px;
-  $base-background-color: white;
-  $base-font-size: 1em;
-  $base-line-height: 1.5em;
-  $base-accent-color: #477DCA;
-  $dark-gray: #333;
-  $light-gray: #DDD;
-  $medium-screen: em(640);
-  $large-screen: em(860);
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-border-radius: 3px !default;
+  $base-background-color: white !default;
+  $base-font-size: 1em !default;
+  $base-line-height: 1.5em !default;
+  $base-accent-color: #477DCA !default;
+  $dark-gray: #333 !default;
+  $light-gray: #DDD !default;
+  $medium-screen: em(640) !default;
+  $large-screen: em(860) !default;
+  $base-font-color: $dark-gray !default;
   -webkit-font-smoothing: antialiased;
 
   h1 {
@@ -29,6 +29,7 @@
   $modal-close-color: $light-gray;
   $modal-image-height: 135px;
   $modal-image-width: $modal-image-height;
+  $modal-trigger-image-width: 300px;
 
   label {
     cursor: pointer;
@@ -36,10 +37,9 @@
   }
 
   label img {
-    $img-width: 300px;
-    border-radius: $img-width/2;
+    border-radius: $modal-trigger-image-width/2;
     display: block;
-    max-width: $img-width;
+    max-width: $modal-trigger-image-width;
   }
 
   input[type="checkbox"] {
@@ -73,8 +73,8 @@
   .modal-close {
     @include position(absolute, ($modal-padding /2) ($modal-padding /2) null null);
     @include size(1.5em);
-    cursor: pointer;
     background: $modal-background;
+    cursor: pointer;
 
     &:after,
     &:before {
@@ -99,26 +99,26 @@
 
   .modal-inner {
     @include transition(opacity .25s ease);
-    border-radius: $base-border-radius;
     background: $modal-background;
+    border-radius: $base-border-radius;
+    margin-top: .6em;
     margin: auto;
     max-height: 95%;
-    position: relative;
     overflow: auto;
-    width: 95%;
     padding: $modal-padding /2;
-    margin-top: .6em;
+    position: relative;
+    width: 95%;
 
     @include media($medium-screen) {
+      margin-top: 10em;
+      max-height: 60%;
       padding: $modal-padding;
       width: 60%;
-      max-height: 60%;
-      margin-top: 10em;
     }
 
     @include media($large-screen) {
-      width: 50%;
       margin-top: 10em;
+      width: 50%;
     }
 
     h1 {
