--- a/source/stylesheets/refills/_progress-bar-indication.scss
+++ b/source/stylesheets/refills/_progress-bar-indication.scss
@@ -1,10 +1,10 @@
 .progress-bar-indication {  
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-border-radius: 3px;
-  $base-background-color: white;
-  $base-line-height: 1.5em;
-  $base-accent-color: #477DCA;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-border-radius: 3px !default;
+  $base-background-color: white !default;
+  $base-line-height: 1.5em !default;
+  $base-accent-color: #477DCA !default;
   -webkit-font-smoothing: antialiased;
 
   p {
@@ -23,31 +23,31 @@
   $progress-color: white;
 
   background-color: $progress-background;
+  border-radius: $base-border-radius;
   border: $progress-border;
   box-shadow: inset 0 0 3px 0 rgba(darken($progress-background, 50%), 0.15);
-  border-radius: $base-border-radius;
   margin: 0 auto;
   width: 50%;
 
   > span.meter {
     @include box-sizing(border-box);
     background-color: $progress-meter-color;
-    background-size: 40px 40px;
     background-repeat: repeat-x;
-    border: $progress-meter-border;
+    background-size: 40px 40px;
+    border-bottom-right-radius: 0;
     border-radius: $base-border-radius /1.5;
     border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border: $progress-meter-border;
     display: block;
     height: 100%;
     width: 60%;
   }
 
   p {
+    color: $progress-color;    
+    font-weight: 800;
     margin: 0;
     padding: .1em .5em;
-    font-weight: 800;
-    color: $progress-color;    
     text-shadow: 0 0 1px black;
   }
 }
