--- a/source/stylesheets/refills/_tooltip.scss
+++ b/source/stylesheets/refills/_tooltip.scss
@@ -1,15 +1,16 @@
 .tooltip-item {  
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-border-radius: 3px;
-  $base-line-height: 1.5em;
-  $dark-gray: #333;
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-border-radius: 3px !default;
+  $base-line-height: 1.5em !default;
+  $dark-gray: #333 !default;
+  $base-font-color: $dark-gray !default;
+  -webkit-font-smoothing: antialiased;
 
   p {
-    margin: 0;
     color: $base-font-color;
     line-height: $base-line-height;
+    margin: 0;
   }
 
   //////////////////////////////////////////////
@@ -22,11 +23,11 @@
   $tooltip-distance-from-item: 140%;
   $tooltip-arrow-distance-from-box: -$tooltip-arrow-width * 3.2;
 
-  border: 1px solid $base-border-color;
-  padding: .5em 1em;
   border-radius: $base-border-radius;
-  position: relative;
+  border: 1px solid $base-border-color;
   margin-bottom: $base-line-height;
+  padding: .5em 1em;
+  position: relative;
 
   &:hover .tooltip {
     opacity: 1;
@@ -37,19 +38,19 @@
     @include position(absolute, null null null 50%);
     @include box-sizing(border-box);
     @include transition (all 0.2s ease-in-out);
-    bottom: $tooltip-distance-from-item;
     background-color: $tooltip-background;
     border-radius: $base-border-radius;
+    bottom: $tooltip-distance-from-item;
+    box-shadow: $tooltip-shadow;
     color: $tooltip-color;
     font-size: .9em; // Make sure you use -webkit-backface-visibility: hidden; on the body element to prevent 1px nudging bugs.
     line-height: 1.5em;
     margin-left: -($tooltip-width/2);
+    min-width: $tooltip-width;
     opacity: 0;
     padding: 1em;
-    box-shadow: $tooltip-shadow;
     text-align: center;
     visibility: hidden;
-    min-width: $tooltip-width;
     z-index: 10;
 
     p {
@@ -58,14 +59,14 @@
 
     &:after {
       @include position(absolute, null null null 46%);
-      margin-left: -$tooltip-arrow-width;
       border: $tooltip-arrow-width solid transparent;
+      bottom: $tooltip-arrow-distance-from-box;
       color: $tooltip-background;
       content: '▼';
-      text-shadow: $tooltip-shadow;
       font-size: 1.4em;
+      margin-left: -$tooltip-arrow-width;
       pointer-events: none;
-      bottom: $tooltip-arrow-distance-from-box;
+      text-shadow: $tooltip-shadow;
     }
   }
 }
