--- a/source/stylesheets/refills/_vertical-tabs.scss
+++ b/source/stylesheets/refills/_vertical-tabs.scss
@@ -1,14 +1,14 @@
 .vertical-tabs-container {
-  // if you are using Bitters you can remove everything down to the commented line
-  $base-border-color: gainsboro;
-  $base-border-radius: 3px;
-  $base-line-height: 1.5em;
-  $base-spacing: 1.5em;
-  $base-accent-color: #477DCA;
-  $base-link-color: $base-accent-color;
-  $dark-gray: #333;
-  $medium-screen: em(640);
-  $base-font-color: $dark-gray;
+  // if you are using bitters.io you can remove everything down to the commented line
+  $base-border-color: gainsboro !default;
+  $base-border-radius: 3px !default;
+  $base-line-height: 1.5em !default;
+  $base-spacing: 1.5em !default;
+  $base-accent-color: #477DCA !default;
+  $base-link-color: $base-accent-color !default;
+  $dark-gray: #333 !default;
+  $medium-screen: em(640) !default;
+  $base-font-color: $dark-gray !default;
   -webkit-font-smoothing: antialiased;
 
   li {
@@ -87,9 +87,9 @@
     }
 
     @include media($vertical-tab-mode) {
-      display: inline-block;
       @include size(80% $vertical-tabs-height);
       background-color: $tab-content-background;
+      display: inline-block;
     }
   }
 
